# 1c-kafka-postgres

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  compose.test.yaml  compose.yaml  docker-compose.yml  justfile  make.ps1  prek.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  live-onec.yml  publish-images.yml  security.yml
1c/: configuration.cf  setup.md
1c/screenshots/: 01_ownership-forms.json  02_counterparties.json  04_postgresql-data.txt  README.md
1c/src/: ConfigDumpInfo.xml  Configuration.xml
1c/src/Catalogs/: Контрагенты.xml  ФормыСобственности.xml
1c/src/Catalogs/ФормыСобственности/Ext/: ObjectModule.bsl
1c/src/HTTPServices/: ИнтеграционныйСервис.xml
1c/src/HTTPServices/ИнтеграционныйСервис/Ext/: Module.bsl
1c/src/Languages/: Русский.xml
consumer-service/: .dockerignore  Dockerfile  pyproject.toml
consumer-service/src/consumer/: __main__.py  config.py  db.py  health.py  logging_setup.py  models.py  worker.py
consumer-service/tests/: __init__.py  test_config.py  test_db_postgres.py  test_health.py  test_parse_event.py  test_worker_dlq.py
docs/: architecture.md  ci.md  decisions.md  development.md  event-format.md  event-versioning.md  limitations.md  security.md
integration-service/: Dockerfile  pyproject.toml
integration-service/src/integration/: __main__.py  config.py  logging_setup.py  models.py  producer.py  sync.py  sync_state.py
integration-service/src/integration/sources/: __init__.py  base.py  mock.py  onec_http.py
integration-service/tests/: __init__.py  test_config.py  test_event_envelope.py  test_live_stack.py  test_mock_source.py  test_onec_http.py  test_sync.py
migrations/: 0001_init.sql  V1__init.sql
scripts/: ci-integration.sh
sql/: verify.sql
