[project]
name = "consumer-service"
version = "1.0.0"
description = "Consumer: читает события Kafka и делает upsert в PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.5",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
