[project]
name = "integration-service"
version = "1.0.0"
description = "Producer: читает справочники 1С и публикует события в Kafka"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "confluent-kafka>=2.5",
    "psycopg[binary]>=3.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
