[project]
name = "integration-service"
version = "1.0.0"
description = "Producer: читает справочники 1С и публикует события в Kafka"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "confluent-kafka>=2.5",
    "psycopg[binary]>=3.2",
    "structlog>=24.1",
    "filelock>=3.20,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.0",
    "ty>=0.0.56",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: tests against the live 1C, Kafka, consumer-service, and PostgreSQL stack",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D203", "D212",
    "FIX002",
    "RET504",
    "RUF001",
    "RUF002", "RUF003",
    "TD002", "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004", "S101"]
"tests/test_onec_http.py" = ["PLR2004", "S101", "SLF001"]
"tests/test_sync.py" = ["PLR2004", "S101", "SLF001"]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
quote-style = "double"
indent-style = "space"
